fixed fonts and made homepage website usable on small screens

--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,13 @@
 body {
     background-color: #000;
     color: #fff;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Calibri", "Comic Sans MS", Chalkboard, Arial, Ubuntu;
     margin: 0;
     background-image: url("assets/space.jpg");
 
 }
+
+
 
 .centre {
     display: block; /* or display: inline-block; */
